--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,6 @@
 *.p7s filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.winmd filter=lfs diff=lfs merge=lfs -text
+*.o filter=lfs diff=lfs merge=lfs -text
+*.bin filter=lfs diff=lfs merge=lfs -text
+.utmp/RelWithDebInfo/501l2r11/arm64-v8a/.ninja_deps filter=lfs diff=lfs merge=lfs -text
